Fix mobile menu: keep navigation visible on mobile devices

--- a/static/assets/media-queries.css
+++ b/static/assets/media-queries.css
@@ -60,10 +60,11 @@
         height: 100%;
     }
 
-    #navbar-main,
+    /* Removed display:none to keep menu visible on mobile */
+    /* #navbar-main,
     #header #menu-main-slide {
         display: none
-    }
+    } */
 
     .navbar-toggle {
         display: block
